--- a/inst/doc/changes.txt
+++ b/inst/doc/changes.txt
@@ -5,6 +5,11 @@
 
              *************************************
 
+  timsac_1.1.3
+ ==============
+ * Fixed a bug in blomar(). Add F1 and F2 to arguments of subroutine MNONSB in blomarf.f.
+ * Fixed a bug in mlomar(). Add X and U to arguments of subroutine MNONST in mlomarf.f.
+
 
   timsac_1.1.2
  ==============
@@ -24,7 +29,7 @@
 
   timsac_1.0.1
  ==============
- * Fixed bug in decomp() where both seasonal component and trading day effect
+ * Fixed a bug in decomp() where both seasonal component and trading day effect
     are no consideration. The following example demonstrates the problem:
 
         data(Blsallfood)
